--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="help">Help</string>
+    <string name="loaded_balance_message">Loaded previous balance</string>
     <string name="new_transaction_title">Add a transaction cost</string>
     <string name="new_transaction_content_message">Enter cost: </string>
     <string name="new_transaction_cost_hint">$00.00</string>
@@ -13,4 +14,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="balance_filename">balance.txt</string>
+    <string name="transactions_filename">balance.txt</string>
 </resources>
