--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,9 @@
     <string name="loaded_transactions_message">Loaded previous transactions</string>
 
     <string name="today_balance">Today\'s Expenses</string>
-    <string name="empty_balance_hint">$00.00</string>
+    <string name="today_balance_placeholder">$00.00</string>
+    <string name="budget_remaining">Budget Remaining</string>
+    <string name="budget_remaining_placeholder">$00.00</string>
 
     <string name="new_transaction_title">Add a transaction cost</string>
     <string name="new_transaction_content_message">Enter cost: </string>
